# vibeyes

./: .gitignore  Makefile  PRD.md  README.md  pyproject.toml
autoresearch/: EXPERIMENTS.md  pipeline.py  prepare.py  program.md  results.tsv
src/vibeyes/: __init__.py  calibration.py  camera.py  click_calibrator.py  detector.py  face_tracker.py  frame_recorder.py  gaze_estimator.py  main.py  metrics.py  overlay.py  pane_tracker.py  pipeline.py  window_tracker.py
tests/: conftest.py  test_calibration.py  test_detector.py  test_face_tracker.py  test_gaze_estimator.py  test_pane_tracker.py  test_window_tracker.py
